--- a/config/randwal.desktop
+++ b/config/randwal.desktop
@@ -4,7 +4,7 @@ Name=randwal
 GenericName=colorscheme
 Comment=stupidly elegant
 Icon=gnome-info
-Exec=python3 /home/catx0rr/.local/bin/randwal       # change this according to your username
+Exec=python3 /home/user/.local/bin/randwal       # change this according to your username
 Terminal=False
 Type=Application
 Categories=Utility;
